--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "node-practice",
+  "name": "fcc-learn-npm-package-json",
+  "author": "talha",
   "dependencies": {
     "express": "^4.14.0"
   },
@@ -18,6 +19,5 @@
   "homepage": "https://github.com/freeCodeCamp/boilerplate-npm#readme",
   "version": "1.0.0",
   "devDependencies": {},
-  "author": "talha",
   "license": "ISC"
 }
